--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="zero">0dp</dimen>
+    <dimen name="thumbnail_stroke_width">3dp</dimen>
     <dimen name="button_elevation">0dp</dimen>
     <dimen name="button_zoom">1</dimen>
     <dimen name="buttons_container_bottom_padding">0.1dp</dimen>
@@ -11,6 +13,7 @@
     <dimen name="grown_button_elevation">1dp</dimen>
     <dimen name="grown_button_zoom">1.07</dimen>
     <dimen name="image_crop_view_initial_height">0dp</dimen>
+    <dimen name="image_crop_view_max_height">200dp</dimen>
     <dimen name="image_crop_view_vertical_padding">15.4dp</dimen>
     <dimen name="large_button_diameter">75dp</dimen>
     <dimen name="large_button_ring_thickness">2.91dp</dimen>
