--- a/android/src/main/res/layout/activity_image_preview.xml
+++ b/android/src/main/res/layout/activity_image_preview.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/lyt_bottom_layout"
         android:clipToPadding="false"
-        android:scrollbars="horizontal"/>
+        android:scrollbars="none"/>
 
     <LinearLayout
         android:id="@+id/lyt_bottom_layout"
@@ -84,7 +84,7 @@
             android:id="@+id/thumbnail_carousel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="horizontal"
+            android:scrollbars="none"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:layout_marginTop="24dp"
