--- a/android/src/main/res/layout/thumbnail_carousel.xml
+++ b/android/src/main/res/layout/thumbnail_carousel.xml
@@ -23,6 +23,7 @@
         android:maxWidth="48dp"
         android:maxHeight="72dp"
         android:layout_gravity="center_horizontal"
+        app:contentPadding="12dp"
         app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
         android:scaleType="center"
         />
