Added ability to pass file by reference

--- a/android/src/main/res/layout/layout_image_crop.xml
+++ b/android/src/main/res/layout/layout_image_crop.xml
@@ -50,7 +50,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_auto_crop"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:text="Auto Crop"
             android:textColor="@android:color/white"
             style="@style/Widget.Material3.Button.TextButton"
