Fix UI for preview screen

--- a/android/src/main/res/layout/thumbnail_carousel.xml
+++ b/android/src/main/res/layout/thumbnail_carousel.xml
@@ -11,7 +11,7 @@
     app:cardCornerRadius="8dp"
     app:cardElevation="0dp"
     app:strokeWidth="1dp"
-    app:strokeColor="@color/white"
+    app:strokeColor="@color/lightGray"
     >
     <!-- Thumbnail Items Programmatically added -->
 
