--- a/android/src/main/res/layout/thumbnail_carousel.xml
+++ b/android/src/main/res/layout/thumbnail_carousel.xml
@@ -1,27 +1,44 @@
-<com.google.android.material.card.MaterialCardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/thumbnailCard"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:textAlignment="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="16dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="0dp"
-    app:strokeWidth="1dp"
-    app:strokeColor="@color/lightGray"
-    >
-    <!-- Thumbnail Items Programmatically added -->
+    android:layout_marginTop="16dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageView"
-        android:layout_width="48dp"
-        android:layout_height="72dp"
-        android:maxWidth="48dp"
-        android:maxHeight="72dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="center"
-        />
-</com.google.android.material.card.MaterialCardView>
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/thumbnailCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/lightGray">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageView"
+            android:layout_width="48dp"
+            android:layout_height="72dp"
+            android:maxWidth="48dp"
+            android:maxHeight="72dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="center"/>
+    </com.google.android.material.card.MaterialCardView>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/addPageText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="12sp"/>
+    </FrameLayout>
+
+</LinearLayout>
