--- a/android/src/main/res/layout/preview_carousel.xml
+++ b/android/src/main/res/layout/preview_carousel.xml
@@ -15,11 +15,9 @@
     <!-- Main ImageView to Show Selected Image -->
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-
-        android:contentDescription="TODO"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_placeholder"/>
+        android:contentDescription="TODO"
+    android:src="@drawable/ic_placeholder"/>
 </com.google.android.material.carousel.MaskableFrameLayout>
